# mytestplugin2

./: .gitignore  CMakeLists.txt  Myplugintest-Linux-x64.json  Myplugintest.json.in  README.md  data.json  modifyJson.js  myplugintest.cpp  myplugintestconstants.h  myplugintesttr.h
.github/: downloadQtC.js  modifyJson.js  registerPlugin.js  template.json  utils.js
.github/scripts/: downloadQtC.js  plugin.json  registerPlugin.js  utils.js
.github/workflows/: build_cmake.yml  check_qtc_releases.yaml  update-json.yml
